<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:background="@color/lightBlue"
        android:drawableStart="@drawable/ic_baseline_arrow_back_24"
        android:drawablePadding="@dimen/dp_30"
        android:padding="@dimen/dp_18"
        android:text="@string/create_account_text"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_70"
        android:text="@string/alma_lawson_example_com_text"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_50"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_70"
        android:text="@string/jane_cooper_text"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_50"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_70"
        android:text="Password (minimum 6 characters)"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_50"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Use phone number"
        android:textColor="@color/lightBlue"
        android:textStyle="bold"
        android:padding="@dimen/dp_10"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_30" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:background="@drawable/rect_bg"
        android:text="Sign up"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/or_text"
        android:textSize="@dimen/sp_22"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_30" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:background="@drawable/fb_bg"
        android:drawableStart="@drawable/logo_facebook"
        android:text="@string/continue_with_facebook_txt"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:background="@drawable/goo_bg"
        android:drawableStart="@drawable/icons_google"
        android:text="@string/continue_with_google_txt"
        android:textAllCaps="false"
        android:textColor="@color/black" />


</LinearLayout>